# linkedin-content-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
app/: linkedin_content_engine.py  main.py
app/backend/: api.py
app/config/: config.py
app/content_agent/: __init__.py  agent.py
app/content_service/: __init__.py  agent.py
app/core/: linkedin_content_engine.py
app/frontend/: ui.py
app/research_agent/: __init__.py  graph.py  state.py
app/research_service/: __init__.py  graph.py  state.py
app/utilities/: logger.py  prompt_parser.py
content_agent/: __init__.py  pipeline.py
content_agent/agents/: __init__.py  copywriter_agent.py  editor_agent.py  optimizer_agent.py  strategist_agent.py
content_agent/instruction/: copywriter_instruction.py  editor_instruction.py  optimizer_instruction.py  strategist_instruction.py
content_agent/prompts/: __init__.py  optimizer_instruction.py  strategist_instruction.py
content_agent/schemas/: __init__.py  strategy_schema.py
docs/plans/: 2026-02-23-autonomous-agent-design.md
jenkins/: Dockerfile
pipeline/: __init__.py  orchestrator.py  prompt_parser.py
research_agent/: __init__.py  graph.py  state.py
research_agent/agents/: fact_checker_agent.py  github_analyser_agent.py  news_researcher_agent.py  supervisor.py  synthesizer_agent.py  trend_analyser_agent.py
research_agent/prompts/: fact_checker_prompt.py  supervisor_prompt.py  (+4 more)
shared/: __init__.py  config.py  logger.py
tests/: fact_checker_test.py  github_analyser_test.py  news_researcher_test.py  supervisor_test.py  synthesizer_test.py  trend_analyser_test.py
(+72 files in other folders)
